# ContactsApp-REST-API

./: .gitignore  README.md  docker-compose.yml  logs.txt  main.py  pyproject.toml  requirements.txt  test.db
docs/: conf.py
docs/_build/html/: .buildinfo
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/templates/: base.html
tests/: conftest.py  test_repository_users.py  test_route_auth.py  test_unit_repository_contacts.py
