[tool.poetry]
name = "web12hm"
version = "0.1.0"
description = ""
authors = ["Antibiotic <ofsposs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.100.0"}
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
libgravatar = "^1.0.4"
fastapi-jwt-auth = "^0.5.0"
redis = "^4.6.0"
fastapi-mail = "^1.4.1"
redis-lru = "^0.1.2"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.33.0"
pytest = "^7.4.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.1.2"


[tool.poetry.group.test.dependencies]
httpx = "^0.24.1"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
